--- a/public/css/todos.css
+++ b/public/css/todos.css
@@ -66,6 +66,17 @@ input#newTodoTitle {
   border: none;
   outline: none;
 }
+#subject {
+  width: 80%;
+  padding: 12px;
+  border: none;
+  outline: none;
+  font-size: 16px;
+  font-family: Arial, sans-serif;
+  height: 134px;
+  resize: none;
+}
+
 button#addTodoButton {
   padding: 10px 25px;
   margin: 10px 0px;
