--- a/views/todos.ejs
+++ b/views/todos.ejs
@@ -77,12 +77,7 @@
                 />
               </div>
               <div class="taskInput">
-                <input
-                  id="newTodoTitle"
-                  type="text"
-                  name="body"
-                  placeholder="Add a task..."
-                />
+                <textarea id="subject" name="body" placeholder="Add a task..."></textarea>
               </div>
               <button id="addTodoButton" type="submit">Add</button>
             </div>
