--- a/public/css/signup.css
+++ b/public/css/signup.css
@@ -48,3 +48,10 @@ a {
   text-decoration: none;
   color: #007bff;
 }
+.alert-danger {
+  color: #cc0000;
+  background-color: rgba(255, 0, 0, 0.05);
+  padding: 0.1em 0.3em;
+  border-radius: 2px;
+  font-weight: bold;
+}
