--- a/views/login.ejs
+++ b/views/login.ejs
@@ -7,6 +7,10 @@
   </head>
   <body>
     <div class="container">
+      <% if (error && error.length) { %>
+      <div class="alert-danger"><%= error[0] %></div>
+      <% } %>
+
       <h1>Login To View Your Todo Tasks</h1>
 
       <form action="/login" method="POST">
