--- a/public/css/todos.css
+++ b/public/css/todos.css
@@ -101,10 +101,7 @@ button#addTodoButton:hover {
 }
 
 .todo-input {
-  /* display: flex;
-  flex-direction: row; */
   padding: 10px;
-  /* margin-bottom: 20px; */
 }
 
 .todo-output {
@@ -136,8 +133,9 @@ button#addTodoButton:hover {
 }
 
 .todo-filter a:hover {
-  background-color: #7fffd4; /* Slightly darker aquamarine on hover */
+  background-color: #7fffd4;
 }
+
 #todo-list {
   display: flex;
   flex-direction: column;
